# sfml-examples

./: .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  build_windows64.bat  cmake.py  conanfile.py  profile.jinja
.github/workflows/: main.yml
01_Tetris/: CMakeLists.txt  main.cpp
02_Doodle_Jump/: CMakeLists.txt  main.cpp
03_Arkanoid/: CMakeLists.txt  main.cpp
04_Snake/: CMakeLists.txt  main.cpp
05_Minesweeper/: CMakeLists.txt  main.cpp
06_Fifteen-Puzzle/: CMakeLists.txt  main.cpp
07_Racing_Top_Down/: CMakeLists.txt  main.cpp
08_Outrun/: CMakeLists.txt  main.cpp
09_Xonix/: CMakeLists.txt  main.cpp
10_Bejeweled/: CMakeLists.txt  main.cpp
11_NetWalk_Pipe_Puzzle/: CMakeLists.txt  main.cpp
12_Mahjong_Solitaire/: CMakeLists.txt  main.cpp
13_Tron/: CMakeLists.txt  main.cpp
14_Chess/: CMakeLists.txt  Connector.hpp  main.cpp
15_Volleyball/: CMakeLists.txt  main.cpp
16_Asteroids/: CMakeLists.txt  main.cpp
cmake/: global_settings.cmake
